--- a/CV.html
+++ b/CV.html
@@ -708,7 +708,7 @@
     <nav>
         <input type="checkbox" id="mobile-menu-toggle" class="mobile-menu-toggle">
         <div class="nav-container">
-            <div class="logo">TONY STARK - CV</div>
+            <div class="logo">WAHYUDIN MORIDU - CV</div>
             <label for="mobile-menu-toggle" class="mobile-menu-btn">☰</label>
             <ul class="nav-links" id="navLinks">
                 <li><a href="index.html">← Back to Page</a></li>
@@ -723,28 +723,30 @@
     <div class="cv-container">
         <div class="sidebar">
             <div class="profile-section" id="profile">
-                <div class="profile-photo">TS</div>
-                <div class="name">Tony Stark</div>
-                <div class="title">Frontend Developer</div>
+                <div class="profile-photo">
+                    <img src="assets/wahyu moridu.jpg" style="width: 100%; height: 100%; border-radius: 50%;">
+                </div>
+                <div class="name">WAHYUDIN MORIDU</div>
+                <div class="title">Dewan Perwakilan Rakyat Daerah Gorontalo</div>
             </div>
 
             <div class="contact-info">
                 <h3>Contact Info</h3>
                 <div class="contact-item">
                     <span class="contact-icon">📧</span>
-                    <span>tony@starkindustries.com</span>
+                    <span>wahyudin@moridu.com</span>
                 </div>
                 <div class="contact-item">
                     <span class="contact-icon">📱</span>
-                    <span>(310) 456-2390</span>
+                    <span>0867-6767-6767</span>
                 </div>
                 <div class="contact-item">
                     <span class="contact-icon">🏠</span>
-                    <span>10880 Malibu Point, 90265</span>
+                    <span>Jl. By Pass, Botu, Kec. Dumbo Raya, Kota Gorontalo, Gorontalo 96134</span>
                 </div>
                 <div class="contact-item">
                     <span class="contact-icon">🌐</span>
-                    <span>New York, NY</span>
+                    <span>Gorontalo, ID</span>
                 </div>
             </div>
 
@@ -753,44 +755,44 @@
                 <div class="social-icons">
                     <a href="https://twitter.com/tonystark" class="social-icon" aria-label="Follow Tony Stark on Twitter" target="_blank" rel="noopener">🐦</a>
                     <a href="https://linkedin.com/in/tonystark" class="social-icon" aria-label="Connect with Tony Stark on LinkedIn" target="_blank" rel="noopener">💼</a>
-                    <a href="https://instagram.com/tonystark" class="social-icon" aria-label="Follow Tony Stark on Instagram" target="_blank" rel="noopener">📷</a>
+                    <a href="https://instagram.com/wahyumoridu" class="social-icon" aria-label="Follow Tony Stark on Instagram" target="_blank" rel="noopener">📷</a>
                 </div>
             </div>
 
             <div class="skills-section">
                 <h3>Technical Skills</h3>
                 <div class="skill-item">
-                    <div class="skill-name">Arc Reactor Technology <span>100%</span></div>
+                    <div class="skill-name">Campaign <span>100%</span></div>
                     <div class="skill-bar">
                         <div class="skill-progress" style="--progress-width: 100%; width: 100%;"></div>
                     </div>
                 </div>
                 <div class="skill-item">
-                    <div class="skill-name">Suit Design & Engineering <span>98%</span></div>
+                    <div class="skill-name">Seduce the Citizens <span>98%</span></div>
                     <div class="skill-bar">
                         <div class="skill-progress" style="--progress-width: 98%; width: 98%;"></div>
                     </div>
                 </div>
                 <div class="skill-item">
-                    <div class="skill-name">AI Development (JARVIS) <span>95%</span></div>
+                    <div class="skill-name">Corruption <span>95%</span></div>
                     <div class="skill-bar">
                         <div class="skill-progress" style="--progress-width: 95%; width: 95%;"></div>
                     </div>
                 </div>
                 <div class="skill-item">
-                    <div class="skill-name">Advanced Robotics <span>92%</span></div>
+                    <div class="skill-name">Holiday <span>92%</span></div>
                     <div class="skill-bar">
                         <div class="skill-progress" style="--progress-width: 92%; width: 92%;"></div>
                     </div>
                 </div>
                 <div class="skill-item">
-                    <div class="skill-name">Holographic Interface <span>88%</span></div>
+                    <div class="skill-name">Flirting Women <span>88%</span></div>
                     <div class="skill-bar">
                         <div class="skill-progress" style="--progress-width: 88%; width: 88%;"></div>
                     </div>
                 </div>
                 <div class="skill-item">
-                    <div class="skill-name">UI/UX Design <span>80%</span></div>
+                    <div class="skill-name">Good Looking <span>80%</span></div>
                     <div class="skill-bar">
                         <div class="skill-progress" style="--progress-width: 80%; width: 80%;"></div>
                     </div>
@@ -802,7 +804,7 @@
             <div class="section">
                 <h2 class="section-title">About Me</h2>
                 <div class="about-text">
-                    <p>Inventor visioner dan industrialis ulung yang mendedikasikan hidup untuk melindungi dunia melalui teknologi. Memiliki rekam jejak dalam merancang dan membangun armor canggih, mengembangkan solusi energi bersih, dan memimpin tim pahlawan super. Terampil dalam menyelesaikan masalah di bawah tekanan ekstrem.</p>
+                    <p>Wahyudin Moridu yang lahir pada 11 November 1995 adalah seorang politikus asal Indonesia. Ia merupakan anggota Dewan Perwakilan Rakyat Daerah (DPRD) Provinsi Gorontalo periode 2024–2029 dari Partai Demokrasi Indonesia Perjuangan (PDIP). Namanya dikenal luas setelah video dirinya mengaku ingin merampok uang negara viral di media sosial pada September 2025.</p>
                 </div>
             </div>
 
@@ -812,16 +814,16 @@
                 <div class="experience-item">
                     <div class="item-header">
                         <div>
-                            <div class="item-title">CEO, Stark Industries</div>
-                            <div class="item-company">New York, NY</div>
+                            <div class="item-title">DPRD Provisni Gorontalo</div>
+                            <div class="item-company">Gorontalo, ID</div>
                         </div>
-                        <div class="item-date">1991 - Present</div>
+                        <div class="item-date">2024 - 2025</div>
                     </div>
                     <div class="item-description">
                         <ul>
-                            <li>Mengubah perusahaan dari produksi senjata menjadi pemimpin global dalam teknologi energi bersih.</li>
-                            <li>Merancang dan memimpin pengembangan Teknologi Arc Reactor.</li>
-                            <li>Bertanggung jawab atas semua operasional, inovasi, dan filantropi perusahaan.</li>
+                            <li>Membentuk peraturan daerah bersama gubernur.</li>
+                            <li>Membahas dan menyutujui Rancangan Peraturan Daerah tentang APBD.</li>
+                            <li>Mengawasi pelaksanaan Perda dan APBD serta pelaksanaan kebijakan pemerintah daerah.</li>
                         </ul>
                     </div>
                 </div>
@@ -829,16 +831,16 @@
                 <div class="experience-item">
                     <div class="item-header">
                         <div>
-                            <div class="item-title">Founder & Consultant, The Avengers</div>
-                            <div class="item-company">Global</div>
+                            <div class="item-title">DPRD Kabupaten Boalemo</div>
+                            <div class="item-company">Boalemo, ID</div>
                         </div>
-                        <div class="item-date">2012 - 2023</div>
+                        <div class="item-date">2019 - 2024</div>
                     </div>
                     <div class="item-description">
                         <ul>
-                            <li>Mendirikan tim respons cepat untuk ancaman global.</li>
-                            <li>Menyediakan peralatan, teknologi, dan persenjataan untuk semua anggota tim.</li>
-                            <li>Berpartisipasi aktif dalam berbagai misi penyelamatan dunia.</li>
+                            <li>Menjadi salah satu anggota DPRD Boalemo termuda.</li>
+                            <li>Membantu menyalurkan aspirasi warga Boalemo</li>
+                            <li>Melakukan pengawasan terhadap pelaksanaan Peraturan Daerah dan APBD.</li>
                         </ul>
                     </div>
                 </div>
@@ -850,13 +852,13 @@
                 <div class="education-item">
                     <div class="item-header">
                         <div>
-                            <div class="item-title">Massachusetts Institute of Technology (MIT)</div>
-                            <div class="item-institution">Cambridge, MA</div>
+                            <div class="item-title">Ichsan Gorontalo University</div>
+                            <div class="item-institution">Gorontalo, ID</div>
                         </div>
-                        <div class="item-date">Graduated at 17</div>
+                        <div class="item-date">Graduated at 2020</div>
                     </div>
                     <div class="item-description">
-                        <p>Summa Cum Laude, gelar ganda di bidang Fisika dan Teknik Elektro. Fokus pada kecerdasan buatan dan robotika.</p>
+                        <p>Bachelor of Laws(LLB), primary law degree and serves as the first professional qualification for legal practitioners. This degree requires the study of core legal subjects and jurisprudence to provide a comprehensive understanding of the legal system and its function.</p>
                     </div>
                 </div>
             </div>
@@ -867,33 +869,17 @@
                     <div class="achievement-item">
                         <div class="achievement-icon">🏆</div>
                         <div class="achievement-content">
-                            <div class="achievement-year">2008</div>
-                            <h4>Iron Man Mark I</h4>
-                            <p>Developed first arc reactor powered suit in captivity using limited resources.</p>
+                            <div class="achievement-year">2019</div>
+                            <h4>PDI Perjuangan Cadres</h4>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit perspiciatis eveniet omnis.</p>
                         </div>
                     </div>
                     <div class="achievement-item">
                         <div class="achievement-icon">🤖</div>
                         <div class="achievement-content">
-                            <div class="achievement-year">2010</div>
-                            <h4>JARVIS AI System</h4>
-                            <p>Created advanced AI assistant capable of managing complex operations and suit functions.</p>
-                        </div>
-                    </div>
-                    <div class="achievement-item">
-                        <div class="achievement-icon">⚡</div>
-                        <div class="achievement-content">
-                            <div class="achievement-year">2009</div>
-                            <h4>Clean Energy Revolution</h4>
-                            <p>Transformed Stark Industries from weapons manufacturing to clean energy technology.</p>
-                        </div>
-                    </div>
-                    <div class="achievement-item">
-                        <div class="achievement-icon">🌍</div>
-                        <div class="achievement-content">
-                            <div class="achievement-year">2012</div>
-                            <h4>Battle of New York</h4>
-                            <p>Led the Avengers in defending Earth from the Chitauri invasion.</p>
+                            <div class="achievement-year">2024</div>
+                            <h4>Faction Secretary of PDI Perjuangan DPRD Gorontalo Province</h4>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit perspiciatis eveniet omnis.</p>
                         </div>
                     </div>
                 </div>
@@ -904,31 +890,17 @@
                 <div class="projects-grid">
                     <div class="project-item">
                         <div class="project-header">
-                            <h4>Mark 85 Armor</h4>
+                            <h4>Robbing State Funds</h4>
                             <span class="project-status completed">Completed</span>
                         </div>
-                        <p>Latest iteration of Iron Man suit featuring nanotechnology, enhanced durability, and compatibility with Infinity Stones.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit perspiciatis eveniet omnis.</p>
                     </div>
                     <div class="project-item">
                         <div class="project-header">
-                            <h4>Arc Reactor Technology</h4>
+                            <h4>Truck Driver</h4>
                             <span class="project-status active">Active</span>
                         </div>
-                        <p>Revolutionary clean energy source powering both personal suits and large-scale industrial applications.</p>
-                    </div>
-                    <div class="project-item">
-                        <div class="project-header">
-                            <h4>FRIDAY AI</h4>
-                            <span class="project-status active">Active</span>
-                        </div>
-                        <p>Advanced AI system successor to JARVIS, managing global security operations and suit functions.</p>
-                    </div>
-                    <div class="project-item">
-                        <div class="project-header">
-                            <h4>Stark Tower</h4>
-                            <span class="project-status completed">Completed</span>
-                        </div>
-                        <p>Self-sufficient building powered entirely by arc reactor technology, serving as headquarters for operations.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit perspiciatis eveniet omnis.</p>
                     </div>
                 </div>
             </div>
