--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
 <body>
     <nav>
         <div class="nav-container">
-            <div class="logo">TONY STARK</div>
+            <div class="logo">WAHYU MORIDU</div>
             <button class="mobile-menu-btn" onclick="toggleMobileMenu()">☰</button>
             <ul class="nav-links" id="navLinks">
                 <li><a href="#home">Home</a></li>
@@ -392,9 +392,9 @@
 
     <section class="hero" id="home">
         <div class="hero-content">
-            <h1>Tony Stark</h1>
-            <p class="tagline">Frontend Developer & UI/UX Enthusiast</p>
-            <a href="cv.html" class="cta-button">View My Creative CV</a>
+            <h1>WAHYU MORIDU</h1>
+            <p class="tagline">DPRD PROVINSI GORONTALO</p>
+            <a href="cv.html" class="cta-button">This Is My CV</a>
         </div>
     </section>
 
@@ -406,8 +406,8 @@
                 </div>
                 <div class="about-content">
                     <h2>About Me</h2>
-                    <p>I'm Tony Stark, a passionate Frontend Developer with a keen eye for creating intuitive and visually appealing user interfaces. With expertise in modern web technologies, I transform ideas into engaging digital experiences.</p>
-                    <p>My journey in web development started with a curiosity for how things work behind the scenes. Today, I specialize in creating responsive, accessible, and performance-optimized websites that deliver exceptional user experiences.</p>
+                    <p>Wahyudin Moridu yang lahir pada 11 November 1995 adalah seorang politikus asal Indonesia. Saya merupakan anggota Dewan Perwakilan Rakyat Daerah (DPRD) Provinsi Gorontalo periode 2024–2029 dari Partai Demokrasi Indonesia Perjuangan (PDIP). Saya dikenal luas setelah video saya mengaku ingin merampok uang negara viral di media sosial pada September 2025.</p>
+                    <p>Pada Pemilu 2024, saya mencalonkan diri sebagai anggota DPRD Provinsi Gorontalo dari daerah pemilihan Boalemo–Pohuwato dan berhasil meraih 5.654 suara. Saya resmi dilantik pada 9 September 2024.[2] Saya juga menjabat sebagai Sekretaris Fraksi PDIP DPRD Provinsi Gorontalo</p>
                 </div>
             </div>
         </div>
@@ -419,23 +419,18 @@
             <div class="skills-grid">
                 <div class="skill-card">
                     <div class="skill-icon">🌐</div>
-                    <h3>HTML5 & CSS3</h3>
-                    <p>Semantic markup and modern styling techniques for responsive web design</p>
+                    <h3>Driving a Truck</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, quaerat excepturi.</p>
                 </div>
                 <div class="skill-card">
                     <div class="skill-icon">⚡</div>
-                    <h3>JavaScript</h3>
-                    <p>Dynamic and interactive web applications with vanilla JS and modern frameworks</p>
+                    <h3>Robbing State Funds</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, quaerat excepturi.</p>
                 </div>
                 <div class="skill-card">
                     <div class="skill-icon">🎨</div>
-                    <h3>UI/UX Design</h3>
-                    <p>User-centered design principles and modern interface design</p>
-                </div>
-                <div class="skill-card">
-                    <div class="skill-icon">📱</div>
-                    <h3>Responsive Design</h3>
-                    <p>Mobile-first approach ensuring optimal experience across all devices</p>
+                    <h3>Son of the Regent of Boalemo</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam inventore ducimus excepturi.</p>
                 </div>
             </div>
         </div>
@@ -446,24 +441,17 @@
             <h2 class="section-title">Featured Projects</h2>
             <div class="portfolio-grid">
                 <div class="portfolio-item">
-                    <div class="portfolio-image">E-Commerce Platform</div>
+                    <div class="portfolio-image">Tiktok Live Streaming</div>
                     <div class="portfolio-content">
-                        <h3>E-Commerce Platform</h3>
-                        <p>A fully responsive e-commerce website with modern design and seamless user experience.</p>
+                        <h3>Tiktok Live Streaming</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, quaerat excepturi.</p>
                     </div>
                 </div>
                 <div class="portfolio-item">
-                    <div class="portfolio-image">Dashboard UI</div>
+                    <div class="portfolio-image">Truck Driving</div>
                     <div class="portfolio-content">
-                        <h3>Analytics Dashboard</h3>
-                        <p>Interactive dashboard with data visualization and real-time updates.</p>
-                    </div>
-                </div>
-                <div class="portfolio-item">
-                    <div class="portfolio-image">Mobile App Landing</div>
-                    <div class="portfolio-content">
-                        <h3>Mobile App Landing</h3>
-                        <p>Converting landing page for mobile application with engaging animations.</p>
+                        <h3>Truck Driving</h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
                     </div>
                 </div>
             </div>
@@ -472,7 +460,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 Tony Stark. Ready to innovate at PT. Thanos Berbakti</p>
+            <p>&copy; 2025 Wahyu Moridu. Ready to innovate at DPRD Gorontalo Province</p>
         </div>
     </footer>
 
