--- a/CV.html
+++ b/CV.html
@@ -724,7 +724,7 @@
         <div class="sidebar">
             <div class="profile-section" id="profile">
                 <div class="profile-photo">
-                    <img src="assets/wahyu moridu.jpg" style="width: 100%; height: 100%; border-radius: 50%;">
+                    <img src="assets/wahyu.png" style="width: 100%; height: 100%; border-radius: 50%;">
                 </div>
                 <div class="name">WAHYUDIN MORIDU</div>
                 <div class="title">Dewan Perwakilan Rakyat Daerah Gorontalo</div>
