--- a/index.html
+++ b/index.html
@@ -401,8 +401,8 @@
     <section class="about" id="about">
         <div class="container">
             <div class="about-grid">
-                <div class="about-image">
-                    <div class="profile-img">TS</div>
+                <div class="profile-img">
+                        <img src="assets/wahyu.png" alt="Foto Profil Wahyu Moridu" style="width:100%; height:100%; border-radius:50%;">
                 </div>
                 <div class="about-content">
                     <h2>About Me</h2>
@@ -441,18 +441,22 @@
             <h2 class="section-title">Featured Projects</h2>
             <div class="portfolio-grid">
                 <div class="portfolio-item">
-                    <div class="portfolio-image">Tiktok Live Streaming</div>
-                    <div class="portfolio-content">
-                        <h3>Tiktok Live Streaming</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, quaerat excepturi.</p>
-                    </div>
+                <div class="portfolio-image">
+                    <img src="assets/tiktok.jpg" alt="Tiktok Live Streaming" style="width:100%; height:200px; object-fit:cover;">
                 </div>
-                <div class="portfolio-item">
-                    <div class="portfolio-image">Truck Driving</div>
-                    <div class="portfolio-content">
-                        <h3>Truck Driving</h3>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    </div>
+        <div class="portfolio-content">
+            <h3>Tiktok Live Streaming</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, quaerat excepturi.</p>
+        </div>
+    </div>
+    <div class="portfolio-item">
+        <div class="portfolio-image">
+            <img src="assets/truck.jpg" alt="Truck Driving" style="width:100%; height:200px; object-fit:cover;">
+        </div>
+        <div class="portfolio-content">
+            <h3>Truck Driving</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
                 </div>
             </div>
         </div>
