--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         }
 
         .nav-container {
-            max-width: 1200px;
+            max-width: 1200px;  
             margin: 0 auto;
             display: flex;
             justify-content: space-between;
@@ -420,17 +420,17 @@
                 <div class="skill-card">
                     <div class="skill-icon">🌐</div>
                     <h3>Driving a Truck</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, quaerat excepturi.</p>
+                    <p>Mahir mengoperasikan kendaraan besar dan menjaga keselamatan, disiplin rute, serta ketepatan waktu—mindset yang sama kupakai saat mengelola task dan deadline dalam proyek.</p>
                 </div>
                 <div class="skill-card">
                     <div class="skill-icon">⚡</div>
                     <h3>Robbing State Funds</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, quaerat excepturi.</p>
+                    <p>Berpengalaman mengenali potensi pelanggaran dan mengedepankan transparansi. Terbiasa membuat alur kerja yang patuh aturan serta mengurangi risiko di proses operasional.</p>
                 </div>
                 <div class="skill-card">
                     <div class="skill-icon">🎨</div>
                     <h3>Son of the Regent of Boalemo</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam inventore ducimus excepturi.</p>
+                    <p>Mampu membangun relasi dengan berbagai pihak, menyampaikan informasi dengan jelas, dan menyesuaikan komunikasi untuk audiens yang beragam.</p>
                 </div>
             </div>
         </div>
@@ -442,20 +442,20 @@
             <div class="portfolio-grid">
                 <div class="portfolio-item">
                 <div class="portfolio-image">
-                    <img src="assets/tiktok.jpg" alt="Tiktok Live Streaming" style="width:100%; height:200px; object-fit:cover;">
+                    <img src="assets/tiktok.png" alt="Tiktok Live Streaming" style="width:100%; height:200px; object-fit:cover;">
                 </div>
         <div class="portfolio-content">
             <h3>Tiktok Live Streaming</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, quaerat excepturi.</p>
+            <p>Mengelola sesi live streaming: penyiapan aset visual, moderasi komentar, serta optimasi judul/thumbnail agar interaksi naik. Terbiasa membaca insight untuk memperbaiki tayangan berikutnya.</p>
         </div>
     </div>
     <div class="portfolio-item">
         <div class="portfolio-image">
-            <img src="assets/truck.jpg" alt="Truck Driving" style="width:100%; height:200px; object-fit:cover;">
+            <img src="assets/truck.png" alt="Truck Driving" style="width:100%; height:200px; object-fit:cover;">
         </div>
         <div class="portfolio-content">
             <h3>Truck Driving</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <p>Studi kasus disiplin operasional: perencanaan rute, manajemen waktu, dan akurasi eksekusi. Prinsip yang sama kuterapkan saat menyusun backlog dan shipping feature.</p>
         </div>
                 </div>
             </div>
