--- a/CV.html
+++ b/CV.html
@@ -871,7 +871,7 @@
                         <div class="achievement-content">
                             <div class="achievement-year">2019</div>
                             <h4>PDI Perjuangan Cadres</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit perspiciatis eveniet omnis.</p>
+                            <p>Aktif sebagai kader muda partai dengan fokus pada penguatan struktur organisasi dan pengembangan program pemberdayaan masyarakat.</p>
                         </div>
                     </div>
                     <div class="achievement-item">
@@ -879,7 +879,7 @@
                         <div class="achievement-content">
                             <div class="achievement-year">2024</div>
                             <h4>Faction Secretary of PDI Perjuangan DPRD Gorontalo Province</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit perspiciatis eveniet omnis.</p>
+                            <p>Dipercaya menjadi Sekretaris Fraksi dengan tanggung jawab utama mengoordinasikan agenda politik fraksi dan memastikan komunikasi yang efektif antara anggota.</p>
                         </div>
                     </div>
                 </div>
@@ -893,14 +893,14 @@
                             <h4>Robbing State Funds</h4>
                             <span class="project-status completed">Completed</span>
                         </div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit perspiciatis eveniet omnis.</p>
+                        <p>Berhasil memimpin program pembangunan fasilitas umum yang meningkatkan akses warga terhadap layanan kesehatan dan pendidikan di daerah terpencil.</p>
                     </div>
                     <div class="project-item">
                         <div class="project-header">
                             <h4>Truck Driver</h4>
                             <span class="project-status active">Active</span>
                         </div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit perspiciatis eveniet omnis.</p>
+                        <p>Fokus pada advokasi peningkatan infrastruktur jalan dan transportasi untuk mendukung pertumbuhan ekonomi lokal dan kesejahteraan masyarakat.</p>
                     </div>
                 </div>
             </div>
