--- a/CV.html
+++ b/CV.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Tony Stark - Professional CV showcasing experience as CEO, inventor, and philanthropist specializing in advanced technology and clean energy solutions.">
-    <meta name="keywords" content="CV, resume, Tony Stark, CEO, inventor, technology, clean energy, AI development">
-    <meta name="author" content="Tony Stark">
-    <meta property="og:title" content="Tony Stark - Professional CV">
+    <meta name="description" content="Wahyu Moridu - Professional CV showcasing experience as CEO, inventor, and philanthropist specializing in advanced technology and clean energy solutions.">
+    <meta name="keywords" content="CV, resume, Wahyu Moridu, CEO, inventor, technology, clean energy, AI development">
+    <meta name="author" content="Wahyu Moridu">
+    <meta property="og:title" content="Wahyu Moridu - Professional CV">
     <meta property="og:description" content="Inventor and industrialist dedicated to protecting the world through technology">
     <meta property="og:type" content="website">
-    <title>Tony Stark - Creative CV</title>
+    <title>Wahyu Moridu - Creative CV</title>
     <style>
         :root {
             --primary-blue: #1a237e;
@@ -753,9 +753,9 @@
             <div class="social-media">
                 <h3>Follow Me</h3>
                 <div class="social-icons">
-                    <a href="https://twitter.com/tonystark" class="social-icon" aria-label="Follow Tony Stark on Twitter" target="_blank" rel="noopener">🐦</a>
-                    <a href="https://linkedin.com/in/tonystark" class="social-icon" aria-label="Connect with Tony Stark on LinkedIn" target="_blank" rel="noopener">💼</a>
-                    <a href="https://instagram.com/wahyumoridu" class="social-icon" aria-label="Follow Tony Stark on Instagram" target="_blank" rel="noopener">📷</a>
+                    <a href="https://twitter.com/wahyumoridu" class="social-icon" aria-label="Follow Wahyu Moridu on Twitter" target="_blank" rel="noopener">🐦</a>
+                    <a href="https://linkedin.com/in/wahyumoridu" class="social-icon" aria-label="Connect with Wahyu Moridu on LinkedIn" target="_blank" rel="noopener">💼</a>
+                    <a href="https://instagram.com/wahyumoridu" class="social-icon" aria-label="Follow Wahyu Moridu on Instagram" target="_blank" rel="noopener">📷</a>
                 </div>
             </div>
 
